# yield-farming-gepa-example

./: .env.pass  .gitignore  .tmux.local  AGENTS.md  Makefile  README.md  pyproject.toml  thoughts
MessageReview030226/: Filtered_Low_Confidence.csv  Validation_Sample_Bad .csv  Validation_Sample_Good .csv  Valuable_Agreed.csv  Valuable_Disagreed.csv
examples/: README.md
examples/yield_farming_classifier/: INTERACTIVE_OPTIMIZATION_GUIDE.md  analyze_pareto.py  config.py  data.py  ensemble_prompts.md  evaluator.py  output_logs.md  preview.py  run.py  run_interactive.py
examples/yield_farming_classifier/handoff/: session_state.json
examples/yield_farming_classifier/handoff-test/: session_state.json
skills/optimize-anything/: SKILL.md  restructuring-plan.md
skills/optimize-anything/references/: api-patterns.md  asi-payload.md  evaluator-implementations.md
src/embedding_cohesion/: __init__.py  callback.py  metrics.py
src/optimize_anything/: __init__.py
src/optimize_anything/config/: __init__.py  presets.py
src/optimize_anything/evaluators/: __init__.py  base.py  templates.py
src/optimize_anything/interactive/: __init__.py  proposer.py  report.py  session.py
src/optimize_anything/loaders/: __init__.py  csv.py  markdown.py  writers.py
src/optimize_anything/runners/: __init__.py  optimize.py  (+1 more)
tests/: conftest.py  test_classification_example.py  test_config.py  test_embedding_cohesion.py  test_evaluators.py  test_interactive_flow.py  test_interactive_proposer.py  test_interactive_report.py  test_loaders.py  test_smoke.py  test_yield_farming_example.py
(+99 files in other folders)
